--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "kicad_libs"]
 	path = kicad_libs
-	url = https://github.com:korken89/kicad_libs.git
+	url = https://github.com/korken89/kicad_libs.git
 	branch = master
